<resources>
    <string name="app_name">Car Spot</string>

    <string name="theme_light">Light theme</string>
    <string name="theme_dark">Dark theme</string>
    <string name="theme_default">System default</string>

    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="by">By</string>
    <string name="version_">Version:</string>
    <string name="purchase">Purchase</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>

    <string name="daryl_dyck">Daryl Dyck</string>
    <string name="student_no_daryl">101338429</string>
    <string name="brian_domingo">Brian Domingo</string>
    <string name="student_no_brian">101330689</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="purchased">Purchased</string>
    <string name="license_plate">License Plate</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="building_code">Building Code:</string>
    <string name="suite_no">Suite #:</string>
    <string name="date">Date:</string>
    <string name="mandatory_field">Mandatory Field</string>
    <string name="incorrect_input">Incorrect Input</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="add_remove_license_plates">Add/Remove License Plates</string>
    <string name="add_license_plate">Add License Plate</string>
    <string name="personal_information">Personal Information</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="remember_me">Remember Me</string>
    <string name="create_new_account">Create New Account</string>
    <string name="plateNumber_placeholder">XXXXXXXX</string>
    <string name="five_characters">5 characters</string>
    <string name="two_five_characters">2-5 characters</string>
    <string name="invalid_address">Invalid Address</string>
    <string name="current_location">Current Location</string>
    <string name="ticket_purchase_success">Parking ticket purchase successful!</string>
    <string name="error_purchasing_ticket">There was an error purchasing your parking ticket.</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="invalid_email">Invalid E-mail address</string>
    <string name="invalid_phone_number">Phone number must be 10 digits</string>
    <string name="invalid_password">Must be at least 6 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="two_eight_characters">2-8 characters</string>
    <string name="no_parking_tickets_history">It does not appear you have purchased any parking tickets.</string>

</resources>