<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/createAccount_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvPersonalInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_information"
                android:layout_marginTop="12dp"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:textStyle="bold"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/profileCard_constraintLayout"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profileCard_constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:background="@drawable/card_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPersonalInfo">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstName_InputLayout"
                    style="@style/EditTextBox"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/first_name"
                    app:layout_constraintBottom_toTopOf="@id/lastName_InputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstName_textField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:paddingTop="@dimen/margin_8"
                        android:paddingBottom="@dimen/margin_8" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastName_InputLayout"
                    style="@style/EditTextBox"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/last_name"
                    app:layout_constraintTop_toBottomOf="@id/firstName_InputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/email_InputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastName_textField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:paddingTop="@dimen/margin_8"
                        android:paddingBottom="@dimen/margin_8" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_InputLayout"
                    style="@style/EditTextBox"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/e_mail"
                    app:layout_constraintTop_toBottomOf="@id/email_InputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/phoneNumber_InputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_textField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:paddingTop="@dimen/margin_8"
                        android:paddingBottom="@dimen/margin_8" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneNumber_InputLayout"
                    style="@style/EditTextBox"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/phone_number"
                    app:layout_constraintTop_toBottomOf="@id/email_InputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/password_InputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneNumber_textField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:paddingTop="@dimen/margin_8"
                        android:paddingBottom="@dimen/margin_8" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_InputLayout"
                    style="@style/EditTextBox"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/password"
                    app:layout_constraintTop_toBottomOf="@id/phoneNumber_InputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/confirmPassword_InputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_textField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingTop="@dimen/margin_8"
                        android:paddingBottom="@dimen/margin_8" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPassword_InputLayout"
                    style="@style/EditTextBox"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/confirm_password"
                    app:layout_constraintTop_toBottomOf="@id/password_InputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmPassword_textField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingTop="@dimen/margin_8"
                        android:paddingBottom="@dimen/margin_8" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Changes depending on context -->
            <TextView
                android:id="@+id/tvEnterPlate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/license_plate"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/profileCard_constraintLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/addPlateCard_constraintLayout"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/addPlateCard_constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/card_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEnterPlate">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/enterPlate_InputLayout"
                    style="@style/EditTextBox"
                    android:layout_width="@dimen/match_constraint"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:hint="Enter Plate Number"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/enterPlate_textField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/managePlates_button"
                    style="@style/ButtonOutlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/add_remove_license_plates"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:visibility="invisible"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccount_button"
        style="@style/ButtonOutlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
